@@ -9,7 +9,7 @@
          author="Joe Neeman (spuzzzzzzz@gmail.com)"
          boarddir="gnumch"
          mode="inequality">
-         <_title>Inequality Number Munchers</title>
+         <_title>Inequality Number Munchers</_title>
          <_description>Guide the Number Muncher to the all the expressions that do not equal the number at the top of the screen.</_description>
          <_prerequisite></_prerequisite>
          <_goal>Practise addition, subtraction, multiplication and division.</_goal>
