@@ -5,7 +5,6 @@ AC_CANONICAL_TARGET
 AM_INIT_AUTOMAKE(gcompris, 6.5.3)
 AM_CONFIG_HEADER(config.h)
 AM_MAINTAINER_MODE
-CFLAGS=
 
 # Making releases:
 #   LIBGCOMPRIS_MICRO_VERSION += 1;
